--- a/Diseño.css
+++ b/Diseño.css
@@ -36,3 +36,16 @@ body {
     text-align: center;
     box-shadow: 0 4px 16px rgba(0,0,0,0.12);
 }
+.zona-texto {
+   background-color: rgb(255, 172, 71);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 16px;
+    padding: 32px 24px;
+    width: 400px;
+    color: rgb(255, 255, 255);
+    font-family: 'Playfair Display', serif;
+    text-align: center;
+    box-shadow: 0 4px 16px rgba(0,0,0,0.12);
+}
